Remote Data handled

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "default"
+    productFlavors {
+        dev {
+            versionNameSuffix ".dev"
+        }
+        prod {
+            versionNameSuffix ".prod"
+        }
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -36,7 +46,6 @@ android {
 }
 
 dependencies {
-    implementation(project(":data"))
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
