Core Layer Handled Fix some gradle settings

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -9,52 +9,21 @@ android {
     namespace 'com.example.data'
     compileSdk 33
 
-    defaultConfig {
-        minSdk 24
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
     buildTypes {
+        debug{
+            buildConfigField "String", "WEATHER_API_KEY", String.valueOf(System.getenv("WEATHER_API_KEY"))
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    flavorDimensions "default"
-    productFlavors {
-        dev {
             buildConfigField "String", "WEATHER_API_KEY", String.valueOf(System.getenv("WEATHER_API_KEY"))
         }
-        prod {
-            buildConfigField "String", "WEATHER_API_KEY", String.valueOf(System.getenv("WEATHER_API_KEY"))
-        }
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
     }
 }
 
 dependencies {
     def room_version = "2.5.0"
     def retrofit_version = "2.9.0"
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.8.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
 
     //room
     implementation "androidx.room:room-runtime:$room_version"
