--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -14,12 +16,6 @@ android {
 
 dependencies {
     implementation(project(":domain"))
-
-    implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.8.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //fragment-x
     implementation "androidx.fragment:fragment:1.6.0-alpha04"
@@ -40,4 +36,22 @@ dependencies {
     // navigation component
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    //glide
+    def glide_version = "4.12.0"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+
+    //fresco
+    implementation 'com.facebook.fresco:fresco:2.4.0'
+    implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
+
+    //hilt
+    implementation "com.google.dagger:hilt-android:2.44.2"
+    kapt "com.google.dagger:hilt-compiler:2.44.2"
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
