--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -13,6 +13,12 @@ android {
 dependencies {
     implementation(project(":data"))
 
+    testImplementation 'org.mockito:mockito-inline:3.12.3'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+
     //google map service
     implementation "com.google.android.gms:play-services-location:21.0.1"
 
